src/test/resources/semantic_errors/redecl_var_param.notc
int fun(int n) {
    int n;
}

void main() {
}
